Message function created, generating modified

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <title>Learn</title>
     <meta charset="UTF-8">
 <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
 <link rel="icon" href="favicon.png">
     <script src="js/learn.js"></script>
 </head>
 <body id="learn">
     <main>
-    	<div class="controls">
+
+    	<div id="controls">
     		<!-- <input type="text" name="pairKey" value="tyrion" autocomplete="off">
     		<input type="text" name="pairValue" value="lannister"  autocomplete="off">
     		<button onclick="addPair()">save</button> -->
@@ -19,13 +21,15 @@
     		<button onclick="generatePairs()">generate</button>
     		<button onclick="checkPairs()">check</button>
     	</div>
+
     	<div id="pair-list">
+
     		<!-- <table id="pair-table"></table> -->
 
-    		<ul class="leftcol">
+    		<ul id="leftcol">
     		</ul>
 
-    		<ul  class="rightcol">
+    		<ul  id="rightcol">
     		</ul>
 
     	</div>
