--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css" media="screen" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
-    <script src="./js/learn.js"></script>
+    <script src="./js/application.min.js"></script>
 </head>
 <body id="learn">
     <main>
