--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" media="screen" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
 
-    <script src="./js/application.min.js"></script>
+    <script src="./js/build/application.min.js"></script>
 </head>
 <body id="learn">
     <nav>
