Improved folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,36 @@
 	<title>Angulearn</title>
 </head>
 <body>
-
+	<header>
+		<nav>
+			<ul>
+				<li>AnguLearn</li>
+			</ul>
+		</nav>
+	</header>
+	<section class="connect">
+		<h1 class="connect__header"></h1>
+		<img src="" alt="" class="connect__illustration">
+		<h2 class="connect__try-button"></h2>
+		<ul class="connect__sets">
+			<li class="connect__sets__item"></li>
+			<li class="connect__sets__item"></li>
+			<li class="connect__sets__item"></li>
+			<li class="connect__sets__item"></li>
+		</ul>
+	</section>
+	<section class="order">
+		<h1 class="order__header"></h1>
+		<img src="" alt="" class="order__illustration">
+		<h2 class="order__try-button"></h2>
+		<ul class="order__sets">
+			<li class="order__sets__item"></li>
+			<li class="order__sets__item"></li>
+			<li class="order__sets__item"></li>
+			<li class="order__sets__item"></li>
+		</ul>
+	</section>
+	<footer></footer>
 	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
